--- a/Stage2/package.json
+++ b/Stage2/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.91.1",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "pg": "^8.17.2",
     "react": "19.2.3",
